--- a/mathexplorer/manifest.json
+++ b/mathexplorer/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Math Explorer",
+  "name": "Math Explorer",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "128x128",
       "type": "image/x-icon"
     }
   ],
