--- a/.github/workflows/mathexplorerUpdater.yml
+++ b/.github/workflows/mathexplorerUpdater.yml
@@ -10,17 +10,17 @@ jobs:
         with:
           node-version: '14'
       - run: |
-          git clone https://github.com/behrenle/Math-Explorer.git,
-          git clone https://github.com/behrenle/behrenle.github.io.git,
-          cd Math-Explorer,
-          npm install,
-          npm run build,
-          rm -rf ../behrenle.github.io/mathexplorer,
-          cp mv ./build ../behrenle.github.io/mathexplorer,
-          cd ../behrenle.github.io,
-          git config user.name "MATHEXPLORER_UPDATER",
-          git config user.email "behrenle@posteo.de",
-          git add -A,
+          git clone https://github.com/behrenle/Math-Explorer.git
+          git clone https://github.com/behrenle/behrenle.github.io.git
+          cd Math-Explorer
+          npm install
+          npm run build
+          rm -rf ../behrenle.github.io/mathexplorer
+          cp mv ./build ../behrenle.github.io/mathexplorer
+          cd ../behrenle.github.io
+          git config user.name "MATHEXPLORER_UPDATER"
+          git config user.email "behrenle@posteo.de"
+          git add -A
           git commit -am "updated MathExplorer"
       - name: Push changes
         uses: ad-m/github-push-action@master
