--- a/.github/workflows/mathexplorerUpdater.yml
+++ b/.github/workflows/mathexplorerUpdater.yml
@@ -21,7 +21,7 @@ jobs:
           npm install
           npm run build
           rm -rf ../behrenle.github.io/mathexplorer/*
-          cp ./build/* ../behrenle.github.io/mathexplorer/
+          cp -r ./build ../behrenle.github.io/mathexplorer
           cd ../behrenle.github.io
           git config user.name "MATHEXPLORER_UPDATER"
           git config user.email "behrenle@posteo.de"
