--- a/.github/workflows/mathexplorerUpdater.yml
+++ b/.github/workflows/mathexplorerUpdater.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: '14'
       - run: |
+          cd ~
           git clone https://github.com/behrenle/Math-Explorer.git
           git clone https://github.com/behrenle/behrenle.github.io.git
           echo node --version
@@ -32,5 +33,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
+          directory: ~/behrenle.github.io
           
 
