--- a/.github/workflows/mathexplorerUpdater.yml
+++ b/.github/workflows/mathexplorerUpdater.yml
@@ -13,7 +13,6 @@ jobs:
         with:
           node-version: '14'
       - run: |
-          cd $HOME
           git clone https://github.com/behrenle/Math-Explorer.git
           git clone https://github.com/behrenle/behrenle.github.io.git
           echo node --version
@@ -33,6 +32,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
-          directory: $HOME/behrenle.github.io
+          directory: ./behrenle.github.io
           
 
