--- a/.github/workflows/mathexplorerUpdater.yml
+++ b/.github/workflows/mathexplorerUpdater.yml
@@ -1,33 +1,35 @@
-name: update site
+name: Update MathExplorer
 
 on: workflow_dispatch
 env:
   CI: false
 
 jobs:
-  build:
-      
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Clone repositories
+        run: | 
+          git clone https://github.com/behrenle/Math-Explorer.git
+          git clone https://github.com/behrenle/behrenle.github.io.git
+      
       - uses: actions/setup-node@v2-beta
         with:
           node-version: '14'
-      - run: |
-          git clone https://github.com/behrenle/Math-Explorer.git
-          git clone https://github.com/behrenle/behrenle.github.io.git
-          echo node --version
-          echo npm --version
+      - name: Build MathExplorer
+        run: |
           cd Math-Explorer
           npm install
           npm run build
           rm -rf ../behrenle.github.io/mathexplorer/*
           cp -r ./build ../behrenle.github.io/mathexplorer
           cd ../behrenle.github.io
-          git config user.name "MATHEXPLORER_UPDATER"
+      - name: Update behrenle.github.io repository
+        run: |
+          git config user.name "MATH_EXPLORER_UPDATER"
           git config user.email "behrenle@posteo.de"
-          git add -A
           git commit -am "updated MathExplorer"
-      - name: Push changes
+      - name: Push changes to behrenle.github.io
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
