--- a/.github/workflows/mathexplorerUpdater.yml
+++ b/.github/workflows/mathexplorerUpdater.yml
@@ -23,11 +23,11 @@ jobs:
           npm run build
           rm -rf ../behrenle.github.io/mathexplorer/*
           cp -r ./build ../behrenle.github.io/mathexplorer
-          cd ../behrenle.github.io
       - name: Update behrenle.github.io repository
         run: |
-          git config user.name "MATH_EXPLORER_UPDATER"
-          git config user.email "behrenle@posteo.de"
+          cd ./behrenle.github.io
+          git config --local user.name "MATH_EXPLORER_UPDATER"
+          git config --local user.email "behrenle@posteo.de"
           git commit -am "updated MathExplorer"
       - name: Push changes to behrenle.github.io
         uses: ad-m/github-push-action@master
