--- a/.github/workflows/update-math-explorer.yml
+++ b/.github/workflows/update-math-explorer.yml
@@ -10,32 +10,26 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Clone repositories
-        run: | 
-          git clone https://github.com/behrenle/Math-Explorer.git
-          git clone https://github.com/behrenle/behrenle.github.io.git
-      
+    steps:   
       - uses: actions/setup-node@v2-beta
         with:
           node-version: '14'
-      - name: Build MathExplorer
+      
+      - name: Build and commit updates
         run: |
+          git clone https://github.com/behrenle/Math-Explorer.git
+          git clone https://github.com/behrenle/behrenle.github.io.git
           cd Math-Explorer
           npm install
           npm run build
           cd ..
-      - name: Transfer data
-        run: |
           rm -rf ./behrenle.github.io/mathexplorer
           mv ./Math-Explorer/build ./behrenle.github.io/mathexplorer
-      - name: Update behrenle.github.io repository
-        run: |
           cd ./behrenle.github.io
           git config --local user.name "MATH_EXPLORER_UPDATER"
           git config --local user.email "behrenle@posteo.de"
           git commit -am "updated MathExplorer"
-          cd ..
+          
       - name: Push changes to behrenle.github.io
         uses: ad-m/github-push-action@master
         with:
