--- a/.github/workflows/update-math-explorer.yml
+++ b/.github/workflows/update-math-explorer.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           git clone https://github.com/behrenle/Math-Explorer.git
           git clone https://github.com/behrenle/behrenle.github.io.git
+          echo $HOME
           
       - name: Build
         run: |
@@ -28,8 +29,8 @@ jobs:
       
       - name: Transfer Data
         run: |
-          rm -rf $HOME/behrenle.github.io/mathexplorer
-          mv $HOME/Math-Explorer/build $HOME/behrenle.github.io/mathexplorer
+          rm -rf ./behrenle.github.io/mathexplorer
+          cp -r ./Math-Explorer/build ./behrenle.github.io/mathexplorer
           cd ./behrenle.github.io
           
       - name: Commit changes
